tests/expectations/compiler/function/mutual_recursion_fail.out
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:12:16
     |
  12 |         return bax(n);
     |                ^^^^^^
Error [ETYC0372043]: Cannot call a local transition function from a transition function.
    --> compiler-test:16:16
     |
  16 |         return baz(n);
     |                ^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:3:12
     |
   3 |     return bar(n);
     |            ^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:7:12
     |
   7 |     return foo(n);
     |            ^^^^^^
Error [ETYC0372059]: Cyclic dependency between functions: `test.aleo/baz` --> `test.aleo/bax` --> `test.aleo/baz`
